--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -76,6 +76,7 @@ services:
             - /opt/wso2brs/repository/conf/registry.xml:/mnt/wso2esb/repository/conf/registry.xml
             - /opt/wso2brs/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
             - /opt/wso2brs/repository/conf/carbon.xml:/mnt/wso2esb/repository/conf/carbon.xml
+            - /opt/wso2brs/repository/conf/axis2/axis2.xml:/mnt/wso2esb/repository/conf/axis2/axis2.xml
 
     dss:
         image: eristoddle/wso2dss:3.5.1
@@ -87,6 +88,7 @@ services:
             - /opt/wso2dss/repository/conf/registry.xml:/mnt/wso2dss/repository/conf/registry.xml
             - /opt/wso2dss/repository/conf/security/authenticators.xml:/mnt/wso2dss/repository/conf/security/authenticators.xml
             - /opt/wso2dss/repository/conf/carbon.xml:/mnt/wso2dss/repository/conf/carbon.xml
+            - /opt/wso2dss/repository/conf/axis2/axis2.xml:/mnt/wso2dss/repository/conf/axis2/axis2.xml
 
     # apim:
     #     image: eristoddle/wso2am:2.0.0
@@ -109,3 +111,4 @@ services:
             - /opt/wso2as/repository/conf/registry.xml:/mnt/wso2as/repository/conf/registry.xml
             - /opt/wso2as/repository/conf/security/authenticators.xml:/mnt/wso2as/repository/conf/security/authenticators.xml
             - /opt/wso2as/repository/conf/carbon.xml:/mnt/wso2as/repository/conf/carbon.xml
+            - /opt/wso2as/repository/conf/axis2/axis2.xml:/mnt/wso2as/repository/conf/axis2/axis2.xml
