--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,26 @@ services:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
 
-    wso2mysql:
-        image: mysql:5.7.10
+    wso2postgres:
+        # NOTE: Have to build this with a custom conf because of max connections
+        # And can't sync the data volume anc conf since the conf is in the data folder
+        image: postgres:9.6
+        # image: eristoddle/wso2_postgres9
         environment:
-            - MYSQL_ROOT_PASSWORD=password
-        # NOTE: Mysql ports forwarded for local dev only
+            - POSTGRES_PASSWORD=password
+            - POSTGRES_USER=wso2user
+        # NOTE: Port forwarded for local development
         ports:
-            - 3306:3306
+            - 5432:5432
         volumes:
-            - ./conf/wso2scripts/mysql:/docker-entrypoint-initdb.d
-            - ./conf/wso2mysql/:/etc/mysql/conf.d
-            - /var/lib/mysql
+            - ./conf/wso2scripts/postgres-init:/docker-entrypoint-initdb.d
+            # - /var/lib/postgresql/data
+            - ./conf/wso2scripts/postgres-sql:/tmp/postgres-sql
 
     is:
+        # TODO: Script building this image with service providers built in
         image: eristoddle/wso2is_features:5.2.0
+        # image: eristoddle/wso2is:5.2.0
         hostname: wso2identity
         ports:
             - 9443:9443
@@ -37,7 +43,9 @@ services:
             - ./conf/wso2is/repository/conf/axis2/axis2.xml:/mnt/wso2is/repository/conf/axis2/axis2.xml
 
     esb:
+        # TODO: Script building this image with HL7 connector
         image: eristoddle/wso2esb_features:5.0.0
+        # image: eristoddle/wso2esb:5.0.0
         ports:
             - 9444:9444
             - 9764:9764
