--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,7 @@ services:
             - /var/run/docker.sock:/var/run/docker.sock
 
     wso2postgres:
-        # NOTE: Have to build this with a custom conf because of max connections
-        # And can't sync the data volume anc conf since the conf is in the data folder
         image: postgres:9.6
-        # image: eristoddle/wso2_postgres9
         environment:
             - POSTGRES_PASSWORD=password
             - POSTGRES_USER=wso2user
@@ -23,7 +20,7 @@ services:
             - 5432:5432
         volumes:
             - ./conf/wso2scripts/postgres-init:/docker-entrypoint-initdb.d
-            # - /var/lib/postgresql/data
+            - /var/lib/postgresql/data
             - ./conf/wso2scripts/postgres-sql:/tmp/postgres-sql
 
     is:
