--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -17,11 +17,10 @@ services:
             - /tmp/postgresql/data:/var/lib/postgresql/data
             - /tmp/wso2scripts/postgres-sql:/tmp/postgres-sql
 
-    # TODO: Custom manually built image
     is:
         image: eristoddle/wso2is_final
-        # build:
-        #     context: ./conf/wso2is
+        build:
+            context: ./conf/wso2is
         hostname: wso2identity
         ports:
             - 9443:9443
