--- a/conf/wso2esb/pom.xml
+++ b/conf/wso2esb/pom.xml
@@ -7,8 +7,10 @@
     <packaging>pom</packaging>
     <name>Bardavon ESB Profile</name>
     <url>http://wso2.org</url>
+
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.wso2.maven</groupId>
                 <artifactId>carbon-p2-plugin</artifactId>
@@ -60,11 +62,13 @@
 
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.1</version>
                 <executions>
+
                     <execution>
                         <phase>package</phase>
                         <configuration>
@@ -78,11 +82,14 @@
                             <goal>run</goal>
                         </goals>
                     </execution>
+
                 </executions>
             </plugin>
         </plugins>
     </build>
+
     <repositories>
+
         <repository>
             <id>wso2-nexus</id>
             <name>WSO2 internal Repository</name>
@@ -93,15 +100,79 @@
                 <checksumPolicy>ignore</checksumPolicy>
             </releases>
         </repository>
+
+        <repository>
+            <id>wso2.releases</id>
+            <name>WSO2 internal Repository</name>
+            <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+        </repository>
+
+        <repository>
+            <id>wso2.snapshots</id>
+            <name>Apache Snapshot Repository</name>
+            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+
     </repositories>
+
     <pluginRepositories>
+
         <pluginRepository>
             <id>wso2-maven-releases-repository</id>
             <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
         </pluginRepository>
+
         <pluginRepository>
             <id>wso2-maven-snapshots-repository</id>
             <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
         </pluginRepository>
+
     </pluginRepositories>
+
+    <dependencies>
+
+        <!-- <dependency>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>axiom-api</artifactId>
+            <version>${axiom.api.wso2.version}</version>
+        </dependency> -->
+
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>axiom-api</artifactId>
+            <version>${axiom.osgi.version.range}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom.wso2</groupId>
+            <artifactId>axiom</artifactId>
+            <version>${axiom.wso2.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom.wso2</groupId>
+            <artifactId>axiom</artifactId>
+            <version>${axiom.wso2.version}</version>
+        </dependency>
+
+    </dependencies>
+
+    <properties>
+        <axiom.api.wso2.version>1.2.11-wso2v2</axiom.api.wso2.version>
+        <axiom.wso2.version>1.2.11.wso2v2</axiom.wso2.version>
+        <axiom.osgi.version.range>[1.2.11.wso2v2, 1.3.0)</axiom.osgi.version.range>
+    </properties>
+
 </project>
