--- a/conf/wso2is/Dockerfile
+++ b/conf/wso2is/Dockerfile
@@ -6,3 +6,5 @@ COPY /repository/conf/registry.xml /mnt/wso2is/repository/conf/registry.xml
 COPY /repository/conf/user-mgt.xml /mnt/wso2is/repository/conf/user-mgt.xml
 COPY /repository/conf/identity/sso-idp-config.xml /mnt/wso2is/repository/conf/identity/sso-idp-config.xml
 COPY /repository/conf/axis2/axis2.xml /mnt/wso2is/repository/conf/axis2/axis2.xml
+COPY /repository/conf/datasources/metrics-datasources.xml /mnt/wso2is/repository/conf/datasources/metrics-datasources.xml
+COPY /repository/conf/datasources/bps-datasources.xml /mnt/wso2is/repository/conf/datasources/bps-datasources.xml
