--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '2'
 services:
     # Portainer to manage your containers locally
     # Interface located at http://localhost:9000
-    # The fix432 tag may be changed to latest, once latest isn't broken
     portainer:
         image: portainer/portainer:latest
         ports:
@@ -26,12 +25,9 @@ services:
     is:
         image: eristoddle/wso2is:5.3.0
         hostname: wso2identity
-        command: -Dsetup
         ports:
             - 9443:9443
             - 9763:9763
-            # NOTE: Local only access to H2 db browser
-            - 8082:8082
         volumes:
             - ./conf/wso2is/repository/conf/datasources/master-datasources.xml:/mnt/wso2is/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2is/repository/conf/carbon.xml:/mnt/wso2is/repository/conf/carbon.xml
@@ -42,27 +38,24 @@ services:
             - ./conf/wso2is/repository/conf/datasources/metrics-datasources.xml:/mnt/wso2is/repository/conf/datasources/metrics-datasources.xml
             - ./conf/wso2is/repository/conf/datasources/bps-datasources.xml:/mnt/wso2is/repository/conf/datasources/bps-datasources.xml
 
-    # esb:
-    #     # TODO: Script building this image with HL7 connector
-    #     image: eristoddle/wso2esb_features:5.0.0
-    #     ports:
-    #         - 9444:9444
-    #         - 9764:9764
-    #     volumes:
-    #         - ./conf/wso2esb/repository/conf/datasources/master-datasources.xml:/mnt/wso2esb/repository/conf/datasources/master-datasources.xml
-    #         - ./conf/wso2esb/repository/conf/registry.xml:/mnt/wso2esb/repository/conf/registry.xml
-    #         - ./conf/wso2esb/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
-    #         - ./conf/wso2esb/repository/conf/carbon.xml:/mnt/wso2esb/repository/conf/carbon.xml
-    #         - ./conf/wso2esb/repository/conf/axis2/axis2.xml:/mnt/wso2esb/repository/conf/axis2/axis2.xml
+    esb:
+        # TODO: Script building this image with HL7 connector
+        image: eristoddle/wso2esb_features:5.0.0
+        ports:
+            - 9444:9444
+            - 9764:9764
+        volumes:
+            - ./conf/wso2esb/repository/conf/datasources/master-datasources.xml:/mnt/wso2esb/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2esb/repository/conf/registry.xml:/mnt/wso2esb/repository/conf/registry.xml
+            - ./conf/wso2esb/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
+            - ./conf/wso2esb/repository/conf/carbon.xml:/mnt/wso2esb/repository/conf/carbon.xml
+            - ./conf/wso2esb/repository/conf/axis2/axis2.xml:/mnt/wso2esb/repository/conf/axis2/axis2.xml
 
     greg:
         image: eristoddle/wso2greg:5.3.0
-        # command: -Dsetup
         ports:
             - 9445:9445
             - 9765:9765
-            # NOTE: Local only access to H2 db browser
-            - 8083:8082
         volumes:
             - ./conf/wso2greg/repository/conf/datasources/master-datasources.xml:/mnt/wso2greg/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2greg/repository/conf/security/authenticators.xml:/mnt/wso2greg/repository/conf/security/authenticators.xml
@@ -75,29 +68,29 @@ services:
             - ./conf/wso2greg/repository/conf/datasources/social-datasources.xml:/mnt/wso2greg/repository/conf/datasources/social-datasources.xml
 
     # NOTE: There is no standalone BRS any more. So this is another ESB but uses configs from the /conf/wso2brs folder
-    # brs:
-    #     image: eristoddle/wso2esb:5.0.0
-    #     ports:
-    #         - 9446:9446
-    #         - 9766:9766
-    #     volumes:
-    #         - ./conf/wso2brs/repository/conf/datasources/master-datasources.xml:/mnt/wso2esb/repository/conf/datasources/master-datasources.xml
-    #         - ./conf/wso2brs/repository/conf/registry.xml:/mnt/wso2esb/repository/conf/registry.xml
-    #         - ./conf/wso2brs/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
-    #         - ./conf/wso2brs/repository/conf/carbon.xml:/mnt/wso2esb/repository/conf/carbon.xml
-    #         - ./conf/wso2brs/repository/conf/axis2/axis2.xml:/mnt/wso2esb/repository/conf/axis2/axis2.xml
+    brs:
+        image: eristoddle/wso2esb:5.0.0
+        ports:
+            - 9446:9446
+            - 9766:9766
+        volumes:
+            - ./conf/wso2brs/repository/conf/datasources/master-datasources.xml:/mnt/wso2esb/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2brs/repository/conf/registry.xml:/mnt/wso2esb/repository/conf/registry.xml
+            - ./conf/wso2brs/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
+            - ./conf/wso2brs/repository/conf/carbon.xml:/mnt/wso2esb/repository/conf/carbon.xml
+            - ./conf/wso2brs/repository/conf/axis2/axis2.xml:/mnt/wso2esb/repository/conf/axis2/axis2.xml
 
-    # dss:
-    #     image: eristoddle/wso2dss:3.5.1
-    #     ports:
-    #         - 9447:9447
-    #         - 9767:9767
-    #     volumes:
-    #         - ./conf/wso2dss/repository/conf/datasources/master-datasources.xml:/mnt/wso2dss/repository/conf/datasources/master-datasources.xml
-    #         - ./conf/wso2dss/repository/conf/registry.xml:/mnt/wso2dss/repository/conf/registry.xml
-    #         - ./conf/wso2dss/repository/conf/security/authenticators.xml:/mnt/wso2dss/repository/conf/security/authenticators.xml
-    #         - ./conf/wso2dss/repository/conf/carbon.xml:/mnt/wso2dss/repository/conf/carbon.xml
-    #         - ./conf/wso2dss/repository/conf/axis2/axis2.xml:/mnt/wso2dss/repository/conf/axis2/axis2.xml
+    dss:
+        image: eristoddle/wso2dss:3.5.1
+        ports:
+            - 9447:9447
+            - 9767:9767
+        volumes:
+            - ./conf/wso2dss/repository/conf/datasources/master-datasources.xml:/mnt/wso2dss/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2dss/repository/conf/registry.xml:/mnt/wso2dss/repository/conf/registry.xml
+            - ./conf/wso2dss/repository/conf/security/authenticators.xml:/mnt/wso2dss/repository/conf/security/authenticators.xml
+            - ./conf/wso2dss/repository/conf/carbon.xml:/mnt/wso2dss/repository/conf/carbon.xml
+            - ./conf/wso2dss/repository/conf/axis2/axis2.xml:/mnt/wso2dss/repository/conf/axis2/axis2.xml
 
     # apim:
     #     image: eristoddle/wso2am:2.0.0
@@ -111,14 +104,14 @@ services:
     #         - ./conf/wso2am/repository/conf/carbon.xml:/mnt/wso2am/repository/conf/carbon.xml
     #         - ./conf/wso2am/repository/conf/axis2/axis2.xml:/mnt/wso2am/repository/conf/axis2/axis2.xml
 
-    # as:
-    #     image: eristoddle/wso2as:5.3.0
-    #     ports:
-    #         - 9449:9449
-    #         - 9769:9769
-    #     volumes:
-    #         - ./conf/wso2as/repository/conf/datasources/master-datasources.xml:/mnt/wso2as/repository/conf/datasources/master-datasources.xml
-    #         - ./conf/wso2as/repository/conf/registry.xml:/mnt/wso2as/repository/conf/registry.xml
-    #         - ./conf/wso2as/repository/conf/security/authenticators.xml:/mnt/wso2as/repository/conf/security/authenticators.xml
-    #         - ./conf/wso2as/repository/conf/carbon.xml:/mnt/wso2as/repository/conf/carbon.xml
-    #         - ./conf/wso2as/repository/conf/axis2/axis2.xml:/mnt/wso2as/repository/conf/axis2/axis2.xml
+    as:
+        image: eristoddle/wso2as:5.3.0
+        ports:
+            - 9449:9449
+            - 9769:9769
+        volumes:
+            - ./conf/wso2as/repository/conf/datasources/master-datasources.xml:/mnt/wso2as/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2as/repository/conf/registry.xml:/mnt/wso2as/repository/conf/registry.xml
+            - ./conf/wso2as/repository/conf/security/authenticators.xml:/mnt/wso2as/repository/conf/security/authenticators.xml
+            - ./conf/wso2as/repository/conf/carbon.xml:/mnt/wso2as/repository/conf/carbon.xml
+            - ./conf/wso2as/repository/conf/axis2/axis2.xml:/mnt/wso2as/repository/conf/axis2/axis2.xml
