--- a/examples/Wso2Examples/EsbConfigExample/pom.xml
+++ b/examples/Wso2Examples/EsbConfigExample/pom.xml
@@ -15,6 +15,7 @@
   <description>EsbConfigExample</description>
   <properties>
     <maven.deploy.skip>true</maven.deploy.skip>
+    <maven.car.deploy.skip>true</maven.car.deploy.skip>
     <maven.test.skip>false</maven.test.skip>
     <CApp.type>bpel/workflow=zip,lib/registry/filter=jar,webapp/jaxws=war,lib/library/bundle=jar,service/dataservice=dbs,synapse/local-entry=xml,synapse/proxy-service=xml,carbon/application=car,registry/resource=zip,lib/dataservice/validator=jar,synapse/endpoint=xml,web/application=war,lib/carbon/ui=jar,service/axis2=aar,synapse/sequence=xml,synapse/configuration=xml,wso2/gadget=dar,lib/registry/handlers=jar,lib/synapse/mediator=jar,synapse/task=xml,synapse/api=xml,synapse/template=xml,synapse/message-store=xml,synapse/message-processors=xml,synapse/inbound-endpoint=xml</CApp.type>
   </properties>
@@ -94,6 +95,7 @@
                 <argument>deploy</argument>
                 <argument>-Dmaven.test.skip=${maven.test.skip}</argument>
               </arguments>
+              <skip>true</skip>
             </configuration>
           </execution>
         </executions>
