--- a/examples/Wso2Examples/EsbConfigCappExample/pom.xml
+++ b/examples/Wso2Examples/EsbConfigCappExample/pom.xml
@@ -17,12 +17,12 @@
     <com.bardavon.esbconfigexample.sequence_._hcfRequest>capp/EnterpriseServiceBus</com.bardavon.esbconfigexample.sequence_._hcfRequest>
     <com.bardavon.esbconfigexample.endpoint_._HCInformationService>capp/EnterpriseServiceBus</com.bardavon.esbconfigexample.endpoint_._HCInformationService>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
-    <com.bardavon.esbconfigexample.endpoint_._GeoEp>capp/EnterpriseServiceBus</com.bardavon.esbconfigexample.endpoint_._GeoEp>
+    <com.bardavon.esbconfigexample.endpoint_._GeoEP>capp/EnterpriseServiceBus</com.bardavon.esbconfigexample.endpoint_._GeoEP>
   </properties>
   <dependencies>
     <dependency>
       <groupId>com.bardavon.esbconfigexample.endpoint</groupId>
-      <artifactId>GeoEp</artifactId>
+      <artifactId>GeoEP</artifactId>
       <version>1.0.0</version>
       <type>xml</type>
     </dependency>
